2012-07-23  Charlie Zender  <zender@uci.edu>

	* Limit parsing, evaluation now rewritten, bug-free, and ready for DRN extensions

	* Correctly account for rec_skp_vld_prv in determining new start index

2012-07-22  Charlie Zender  <zender@uci.edu>

	* Update limit code. Introduce off-by-one error on stride. Will fix tomorrow.

2012-07-21  Charlie Zender  <zender@uci.edu>

	* De-conflate rec_skp_ntl_spf from rec_in_cml

2012-07-20  Charlie Zender  <zender@uci.edu>

	* Add regression test for and fix concatenation of record
	coordinate-bounded variable across non-monotonic files

	* Fix segfault parsing coordinate value hyperslabs where max
	specified and min omitted (TODO nco1062)

	* Initialize sng_cnv_rcd with NULL_CEWI instead of CHAR_CEWI

2012-07-19  Charlie Zender  <zender@uci.edu>

	* #include <strings.h> for strcasecmp() prototype

	* Add Multi-record Output (MRO) flag handling

	* Differentiate indices necessary to implement multi-record outputs

	* Rename idx_rec_out as rec_usd_cml, and idx_rec as idx_rec_crr_in,
	and add new idx_rec_out that means what it says.

	* Remove superfluous OpenMP headers from some library files

	* Functionalize ncea/ncra normalization in nco_opr_nrm()

	* Restructure initialize/compute/normalize/write logic of ncra2

2012-07-19  Pedro Vicente  <pvicente@uci.edu>

        * Configure support for UDUnits2 in recent RPM systems (Fedora 17)

2012-07-18  Charlie Zender  <zender@uci.edu>

	* Legalize drn in nco_lmt_prs(), nco_lmt_evl(), nco_msa_lmt_all_int()

	* Add drn to lmt structures

	* Rework error reporting in nco_aed_prs(), nco_lmt_prs(), nco_lmt_evl()

	* Branch ncra.c into ncra2.c to develop hyperslab duration (drn) option

	* Add filters ncdmnsz and ncrecsz

2012-07-18  Pedro Vicente  <pvicente@uci.edu>

        * Add a new Windows installer; avoids the need for the winzip utility

2012-07-16  Pedro Vicente  <pvicente@uci.edu>

        * Detect presence of netCDF library in configure; exit if not present
