@@ -1,5 +1,7 @@
 2012-07-23  Charlie Zender  <zender@uci.edu>
 
+	* Implement new master while loop in ncra2.c
+
 	* Limit parsing, evaluation now rewritten, bug-free, and ready for DRN extensions
 
 	* Correctly account for rec_skp_vld_prv in determining new start index
